# simple-compiler-cpp

./: .gitignore  README.md  install.sh
frontend/: CMakeLists.txt
frontend/include/CodeGen/: CodeGenFunction.h  CodeGenModule.h
frontend/include/Lex/: CharInfo.h  Lexer.h  Token.h
frontend/include/Parse/: AST.h  Parser.h
frontend/lib/CodeGen/: CMakeLists.txt  CodeGenFunction.cpp  CodeGenModule.cpp
frontend/lib/Lex/: CMakeLists.txt  Lexer.cpp
frontend/lib/Parse/: CMakeLists.txt  CompoundString.cpp  Parser.cpp
frontend/test/CodeGen/: CMakeLists.txt  TestCodeGen.cpp
frontend/test/Lex/: CMakeLists.txt  TestLexer.cpp
frontend/test/Parse/: CMakeLists.txt  TestParser.cpp
pass/: CMakeLists.txt
pass/include/CallCount/: CallCount.h
pass/include/DynamicCallCount/: DynamicCallCount.h
pass/include/FunctionNamePrinter/: FunctionNamePrinter.h
pass/include/InsertIncFunction/: InsertIncFunction.h
pass/include/InstCount/: InstCount.h
pass/include/LoopInfoPrinter/: LoopInfoPrinter.h
pass/lib/: CMakeLists.txt
pass/lib/CallCount/: CMakeLists.txt  CallCount.cpp
pass/lib/DynamicCallCount/: CMakeLists.txt  DynamicCallCount.cpp
pass/lib/FunctionNamePrinter/: CMakeLists.txt  FunctionNamePrinter.cpp
pass/lib/InsertIncFunction/: CMakeLists.txt  InsertIncFunction.cpp
pass/lib/InstCount/: CMakeLists.txt  InstCount.cpp
pass/lib/LoopInfoPrinter/: CMakeLists.txt  LoopInfoPrinter.cpp
pass/runtime/: countCall.cpp
pass/samples/: dummy.cpp  mul.cpp
tutorial/: CMakeLists.txt
tutorial/include/CodeGen/: CodeGenFunction.h  CodeGenModule.h
tutorial/include/Lex/: Token.h
tutorial/include/Parse/: AST.h  Parser.h
tutorial/lib/: CMakeLists.txt
tutorial/lib/CodeGen/: CMakeLists.txt  CodeGenFunction.cpp
(+6 files in other folders)
